service-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b-app
  template:
    metadata:
      labels:
        app: service-b-app
    spec:
      containers:
        - name: service-b-app
          image: phatijava/service-b:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: service-b-app
spec:
  selector:
    app: service-b-app
  ports:
    - port: 8080
      targetPort: 8080
