gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-app-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-service1
spec:
  hosts:
  - "*"
  gateways:
  - demo-app-gateway
  http:
  - match:
    - uri:
        exact: /service-a
    route:
    - destination:
        host: service-a-app
        port:
          number: 8080
  - match:
    - uri:
        exact: /service-b
    route:
    - destination:
        host: service-b-app
        port:
          number: 8080
